changed title for project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a href="https://github.com/sarsieg">
                     <img src="assets/images/crop.jpg"/>
                 </a>
-                <p id="troublemakerTwo">Project Two</p>
+                <p id="troublemakerTwo">Github Repositories</p>
             </div>
         </section>
 
