added image to resume section

--- a/index.html
+++ b/index.html
@@ -117,11 +117,7 @@
                     <div>Resume</div>
                 </article>
                 <div id="resumep">
-                    I went to Wayzata High School and worked as a customer service representative at Mcdonalds, a sales
-                    associate at Italian Tan and went on to work as a server where I have been for 6 years. I attended
-                    North Hennepin Community College and am currently taking a bootcamp at the University of Minnesota.
-                    I am talented in many ways and am excited to put my skills to the test in real life situations and
-                    scenarios.
+                    <img src="assets/images/resumeformat-featured.jpg">
                 </div>
             </section>
         </section>
