added margin bottom to resumep img, added media queries

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 </article>
                 <div id="resumep">
                     <img src="assets/images/resumeformat-featured.jpg">
+                    <p id="troublemakerThree"></p>
                 </div>
             </section>
         </section>
