--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
 
             <div id="aboutmep">
                 My name is Sarah Siegel and I am a 24 year old living in Plymouth Minnesota with my two brothers Steven
-                and Scott as well as Alicia and Jaime. We are accompanied by two wonderful doggos named Pooh and Shia. I
+                and Scott as well as Alicia and Jaime. We are accompanied by two wonderful dogs. My dog Pooh who is an
+                American Bulldog at five years old and a little Sharpei named Shia who is one years old. I
                 was born October 27, 1996 at 9:03am in Saint Louis Park Minnesota being born to my wonderful parents
                 Stanley and Susan. We grew up in Wayzata Minnesota and were blessed with the best poodles in the world
-                Sally, Sadie and Stacy. I am currently working on web development education and look forward to using my
-                skills and knowledge in web development.
+                Sally, Sadie and Stacy. I am currently working on web development education at the University of
+                Minnesota while working as a server at Maggie's Family Restaurant in downtown Wayzata Minnesota. Once I
+                complete my web development education I am looking forward to using my
+                skills and knowledge in web development to aquire a job in the field and go on to do great things with
+                the information and expertise that I will have aquired through my education.
             </div>
         </section>
 
@@ -61,7 +65,7 @@
 
             <div id="workp">
                 <a href="https://sarsieg.github.io/refactoring-horiseon/">
-                    <img src="./assets/images/female-coder-coding-National-Coding-Week.jpg"/>
+                    <img src="./assets/images/female-coder-coding-National-Coding-Week.jpg" />
                 </a>
                 <p id="label">Refactoring <br>Website</p>
             </div>
@@ -74,13 +78,13 @@
 
             <div id="work2p" class="work2p">
                 <a href="https://sarsieg.github.io/prework-about-me/">
-                    <img src="assets/images/download.jpg"/>
+                    <img src="assets/images/download.jpg" />
                 </a>
                 <p id="troublemaker">Small Portfolio</p>
             </div>
             <div id="work2p">
                 <a href="https://github.com/sarsieg">
-                    <img src="assets/images/crop.jpg"/>
+                    <img src="assets/images/crop.jpg" />
                 </a>
                 <p id="troublemakerTwo">Github Repositories</p>
             </div>
