--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 My name is Sarah Siegel and I am a 24 year old living in Plymouth Minnesota with my two brothers Steven
                 and Scott as well as Alicia and Jaime. We are accompanied by two wonderful dogs. My dog Pooh who is an
                 American Bulldog at five years old and a little Sharpei named Shia who is one years old. I
-                was born October 27, 1996 at 9:03am in Saint Louis Park Minnesota being born to my wonderful parents
+                was born October 27, 1996 at 9:03am in Saint Louis Park Minnesota to my wonderful parents
                 Stanley and Susan. We grew up in Wayzata Minnesota and were blessed with the best poodles in the world
                 Sally, Sadie and Stacy. I am currently working on web development education at the University of
                 Minnesota while working as a server at Maggie's Family Restaurant in downtown Wayzata Minnesota. Once I
                 complete my web development education I am looking forward to using my
-                skills and knowledge in web development to aquire a job in the field and go on to do great things with
-                the information and expertise that I will have aquired through my education.
+                skills and knowledge in web development to acquire a job in the field and go on to do great things with
+                the information and expertise that I will have acquired through my education.
             </div>
         </section>
 
