added comments in html file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="topnav">
             <ul>
                 <li>
+ <!-- added href to direct the user to specified section from header bar--> 
                     <a href="#resumeside">Resume</a>
                 </li>
                 <li>
@@ -29,6 +30,7 @@
             </ul>
         </div>
     </header>
+<!-- seperated section from header to insert image and border between header and the sections located below -->
     <main>
         <section class="top">
             <figcaption>Cool subtitle here!</figcaption>
@@ -40,7 +42,7 @@
             <article id="aboutmeside">
                 <div>About <br>Me</div>
             </article>
-
+<!-- added id tag to seperate the different parts of the same section -->
             <div id="aboutmep">
                 My name is Sarah Siegel and I am a 24 year old living in Plymouth Minnesota with my two brothers Steven
                 and Scott as well as Alicia and Jaime. We are accompanied by two wonderful dogs. My dog Pooh who is an
@@ -62,8 +64,9 @@
 
                 <div>Work</div>
             </article>
-
+<!-- added id tag to seperate the different parts of the same section -->
             <div id="workp">
+<!-- added href to direct the user to different links of prior work -->
                 <a href="https://sarsieg.github.io/refactoring-horiseon/">
                     <img src="./assets/images/female-coder-coding-National-Coding-Week.jpg" />
                 </a>
@@ -75,14 +78,18 @@
             <article id="work2side">
 
             </article>
-
+<!-- added id tag to seperate the different parts of the same section -->
             <div id="work2p" class="work2p">
+ <!-- added href to direct the user to different links of prior work -->
+               
                 <a href="https://sarsieg.github.io/prework-about-me/">
                     <img src="assets/images/download.jpg" />
                 </a>
                 <p id="troublemaker">Small Portfolio</p>
             </div>
             <div id="work2p">
+ <!-- added href to direct the user to different links of prior work -->
+               
                 <a href="https://github.com/sarsieg">
                     <img src="assets/images/crop.jpg" />
                 </a>
@@ -99,6 +106,7 @@
                 <p id="contactmep">
                 <ul class="contactmelinks">
                     <li>
+<!-- added href to direct the user to different links of prior work -->
                         <a href="https://github.com/sarsieg">Github</a>
                     </li>
                     <li>
@@ -120,6 +128,7 @@
                 <article id="resumeside">
                     <div>Resume</div>
                 </article>
+ <!-- added id tag to seperate the different parts of the same section -->
                 <div id="resumep">
                     <img src="assets/images/resumeformat-featured.jpg">
                     <p id="troublemakerThree"></p>
